Fixed issue with dark overlay for skills section and contact section on mobile devices. Also, changed the way the skills icons are arranged on mobile devices.

--- a/css/base.css
+++ b/css/base.css
@@ -659,7 +659,7 @@ textarea {
 
 /* stack columns on small mobile devices
  * ------------------------------------------------------------------- */
-@media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 400px) {
     .row .row {
         margin-left: 0;
         margin-right: 0;
@@ -675,7 +675,7 @@ textarea {
     [class*="col-"]+[class*="col-"].end {
         float: none;
     }
-}
+} */
 
 
 
@@ -839,7 +839,7 @@ textarea {
 
 /* stack columns on small mobile devices
  * ------------------------------------------------------------------- */
-@media only screen and (max-width: 400px) {
+/* @media only screen and (max-width: 400px) {
     .stack .col-block {
         width: 100% !important;
         float: none !important;
@@ -847,7 +847,7 @@ textarea {
         margin-left: 0;
         margin-right: 0;
     }
-}
+} */
 
 
 
